WIP: Avoid string parsing with Reactor Debug Agent

--- a/reactor-core/build.gradle
+++ b/reactor-core/build.gradle
@@ -254,6 +254,7 @@ task japicmp(type: JapicmpTask) {
 	classExcludes = [
 	]
 	methodExcludes = [
+		"reactor.core.publisher.Hooks#addCallSiteInfo(org.reactivestreams.Publisher, java.lang.String, java.lang.String)"
 	]
 }
 
